ops/conf/k8s/redis.yml
#
# Redis
# Bull scheduler store
#

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: redis
    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - containerPort: 6379

---

apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    run: redis
spec:
  ports:
  - port: 6379
    protocol: TCP
  selector:
    run: redis
