ops/conf/k8s/traefik.yml
#
# Traefik Proxy Deployment and Service
# https://medium.com/@alex__richards/getting-started-with-traefik-43fb7302b224
# https://medium.com/@patrickeasters/using-traefik-with-tls-on-kubernetes-cb67fb43a948
# https://github.com/containous/traefik/blob/master/docs/user-guide/kubernetes.md
# https://docs.traefik.io/user-guide/kubernetes
#
# The Service's Container has two processes:
#   traefik-proxy   (:80      => 443)
#   traefik-ui      (:8080    => 80)
#
# And references the SSL Cert via an annotation.
#   kubectl apply -f ./conf/k8s/traefik.yml
#
# Get the ELB's IP (LoadBalancer Ingress):
#   kubectl describe service traefik-proxy | sed -n 's/^LoadBalancer Ingress:.\(.*\)/\1/p'
#
# Then configure DNS (set www CNAME to point to ELB endpoint).
# NOTE: The IP changes when the Service is deleted and recreated (need to update DNS).
#

kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik-proxy
  labels:
    app: traefik-proxy
    tier: proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-proxy
      tier: proxy
  template:
    metadata:
      labels:
        app: traefik-proxy
        tier: proxy
    spec:
      terminationGracePeriodSeconds: 60

      # kubectl create configmap traefik-conf --from-file=./conf/k8s/traefik.toml
      volumes:
      - name: config
        configMap:
          name: traefik-conf

      containers:
      - image: traefik:v1.2.0-rc1-alpine
        name: traefik-proxy
        resources:
          limits:
            cpu: "200m"
            memory: "30Mi"
          requests:
            cpu: "100m"
            memory: "20Mi"
        volumeMounts:
        - mountPath: "/conf"
          name: config
        ports:
        - containerPort: 80
          hostPort: 80
          name: traefik-proxy
        - containerPort: 8080
          name: traefik-ui
        args:
        # Config API.
        # https://docs.traefik.io/toml/#api-backend
        - --web

        # Use k8s Ingress as backend config.
        # https://docs.traefik.io/toml/#kubernetes-ingress-backend
        - --kubernetes

        - --configfile=/conf/traefik.toml
        - --loglevel=INFO
#       - --debug

---

#
# ELB does SSL termination (CNAME DNS entries here).
# TODO(burdon): Do http=>https redirect.
#

apiVersion: v1
kind: Service
metadata:
  name: traefik-proxy
  annotations:
    # Generated: 08/07/17
    # SSL certificate (https://console.aws.amazon.com/acm).
    # https://gist.github.com/mgoodness/1a2926f3b02d8e8149c224d25cc57dc1
    # https://medium.com/@alex__richards/getting-started-with-traefik-43fb7302b224
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:us-east-1:956243632840:certificate/96d62e5a-6c5f-4b07-974f-ac8229f091f8"
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"             # Allow port 80 to pass through.
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
spec:
  type: LoadBalancer
  selector:
    app: traefik-proxy
    tier: proxy
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 80

---

#
# kubectl port-forward $(kubectl get pods | grep traefik-proxy | awk -F' ' '{print $1}') 8080:8080
#

apiVersion: v1
apiVersion: v1
kind: Service
metadata:
  name: traefik-ui
spec:
  selector:
    app: traefik-proxy
    tier: proxy
  ports:
  - port: 80
    targetPort: 8080
