ops/conf/k8s/alien-ingress.yml
#
# Expose services (via Traefik).
# https://docs.traefik.io/user-guide/kubernetes
#
# kubectl apply -f ./conf/k8s/alien-ingress.yml
#
# Traefik dashboard:
# kubectl port-forward $(kubectl get pods | grep traefik-proxy | awk -F' ' '{print $1}') 8080:8080
# open http://localhost:8080
#

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alien-ingress

  # Preserve root URL.
  # https://medium.com/@Oskarr3/setting-up-ingress-on-minikube-6ae825e98f82
  annotations:
    kubernetes.io/ingress.class: traefik

spec:
  rules:

  #
  # NOTE: host must match DNS CNAME (directed to AWS Route 53).
  # https://domains.google.com/registrar#z=a&d=1022025,robotik.io
  # https://medium.com/@patrickeasters/using-traefik-with-tls-on-kubernetes-cb67fb43a948
  #

  #
  # App server.
  #

  - host: app.robotik.io
    http:
      paths:
      - backend:
          serviceName: alien-app-server
          servicePort: 80

  - host: mobile.robotik.io
    http:
      paths:
      - backend:
          serviceName: alien-app-server
          servicePort: 80

  #
  # Web server.
  #

  - host: www.robotik.io
    http:
      paths:
      - backend:
          serviceName: alien-web-server
          servicePort: 80

  - host: www.alienlabs.io
    http:
      paths:
      - backend:
          serviceName: alien-web-server
          servicePort: 80

  - host: www.minderlabs.com
    http:
      paths:
      - backend:
          serviceName: alien-web-server
          servicePort: 80
