ops/conf/k8s/ingress.yml
#
# Expose services (via Traefik).
# kubectl apply -f ./conf/k8s/ingress.yml
# kubectl port-forward $(kubectl get pods | grep traefik-proxy | awk -F' ' '{print $1}') 8080:8080
# http://localhost:8080
#

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alien-ingress
spec:
  rules:

  - host: www.robotik.io
    http:
      paths:
      - backend:
          serviceName: alien-web-server
          servicePort: 80

  - host: beta.robotik.io
    http:
      paths:
      - backend:
          serviceName: alien-app-server
          servicePort: 80
